<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/reset">


    <Button
            android:text="@string/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="sendMessage"
            android:background="@color/colorPrimary"
            android:textColor="#ffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.922" tools:text="RESET"
            tools:ignore="OnClick"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="34dp"
            tools:layout_editor_absoluteX="224dp" android:clickable="true">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:text="@string/text_View"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textStyle="bold" android:textSize="18sp"
                app:layout_constraintVertical_bias="0.277"
        />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/textView2"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:textStyle="bold" android:textSize="18sp"
        />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:text="@string/textView3"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:text="@string/textView4"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:text="@string/textView5"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:text="@string/textView6"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:text="@string/textView7"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>


        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:text="@string/textView8"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:text="@string/textView9"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold" android:textSize="18sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>